Fix bug 173195: Pipes plugin doesn't support Unicode. Patch by Sebastian Strand, thanks.

BUG: 173195

svn path=/trunk/KDE/kdenetwork/kopete/; revision=912005